@@ -72,6 +72,7 @@ work around compliances issues on Inventec 5441/Dell Xanadu II, Dell
 Poweredge R610, and Dell Poweredge R710 motherboards.
 #include <@top_srcdir@/man/manpage-common-interpret-oem-data.man>
 #include <@top_srcdir@/man/manpage-common-sdr-options.man>
+#include <@top_srcdir@/man/manpage-common-sdr-directory-options.man>
 #include <@top_srcdir@/man/manpage-common-ignore-sdr-cache.man>
 #include <@top_srcdir@/man/manpage-common-hostranged-options-header.man>
 #include <@top_srcdir@/man/manpage-common-hostranged-buffer.man>
